--- a/webui/src/main/webapp/WEB-INF/web.xml
+++ b/webui/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,14 @@
            http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 
-	<display-name>EM</display-name>
+	<display-name>webui</display-name>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/mvc-dispatcher-servlet.xml</param-value>
 	</context-param>
 	<context-param>
-	   	<param-name>log4jConfigLocation</param-name>
+		<param-name>log4jConfigLocation</param-name>
 		<param-value>/WEB-INF/log4j.properties</param-value>
 	</context-param>
 
@@ -19,21 +19,21 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
-	
+
+
 	<servlet-mapping>
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<url-pattern>/ws/*</url-pattern>
 	</servlet-mapping>
-	
-	
+
+
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-		
+
 	<mime-mapping>
 		<extension>json</extension>
 		<mime-type>application/json</mime-type>
